--- a/web/WIP/paint/style.css
+++ b/web/WIP/paint/style.css
@@ -296,71 +296,78 @@ output.error {
 /* NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW NEW */
 
 #display .canvas-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 8px;
-}
-#display canvas {
-  width: 100%;
-  max-height: calc(100vh - 40px);
-  object-fit: contain;
-  
+	position: relative;
+
 /*   box-shadow: 0 0 16px -4px rgba(0, 0, 0, 0.7); */
-  image-rendering: pixelated;
-  
+	
 /* TODO: OCD thing: use exact border buttons have ;) */
-  border: 0.5px solid gray;
-  border-radius: 1px;
+	border: 1px solid gray;
+	border-radius: 1px;
+	
+	line-height: 0;
+	margin-bottom: 8px;
+}
+#display canvas[name=real] {
+	width: 100%;
+	max-height: calc(100vh - 40px);
+	object-fit: contain;
+	
+	image-rendering: pixelated;
+}
+#display canvas[name=helper] {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	
+	image-rendering: crisp-edges
 }
 #display .tools {
-  flex-grow: 1;
-  
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-content: stretch;
-  gap: 8px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-content: stretch;
+	gap: 8px;
 }
 @media (min-width: 600px) {
-  #display .tools {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
-  }
+	#display .tools {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-auto-rows: 1fr;
+	}
 }
 #display button.control-container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 0 !important;
-  position: relative;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	padding: 0 !important;
+	position: relative;
+	align-items: center;
 }
 #display button.control-container .text {
-  width: 100%;
-  padding: 4px;
-  padding-bottom: 0px;
+	width: 100%;
+	padding: 4px;
+	padding-bottom: 0px;
 }
 #display button.control-container input[type=color] {
-  width: 100%;
-  appearance: none;
-  border: none;
-  background: none;
-  padding: 0;
-  margin-bottom: -1px;
+	width: 100%;
+	appearance: none;
+	border: none;
+	background: none;
+	padding: 0;
+	margin-bottom: -1px;
 }
 /* .named-color input[type=color]::-webkit-color-swatch-wrapper {
 	padding: 0px;
 } */
 #display button.control-container input[type=checkbox] {
-  margin: 4px;
-  height: 100%;
+	margin: 4px;
+	height: 100%;
 }
 #display button.control-container select {
-  align-self: flex-end;
-  width: calc(100% - 8px);
-  margin: 4px;
+	align-self: flex-end;
+	width: calc(100% - 8px);
+	margin: 4px;
 /*  margin-top: 4px;
-  border-left: none;
-  border-right: none;
-  border-bottom: none; */
+	border-left: none;
+	border-right: none;
+	border-bottom: none; */
 }
